<resources>
    <string name="app_name">Geolocation Demo</string>
    <string name="current_coordinates">Текущие координаты</string>
    <string name="last_coordinates">Последние координаты</string>
    <string name="update_coordinates">Подписаться на обновление координат</string>
    <string name="request_coordinates">Запросить координаты</string>
    <string name="enter_interval">Введите интервал обновления координат в минутах:</string>
    <string name="receive_coordinates">Получать координаты</string>
    <string name="timer_start_value">%02d:%02d с момента запроса</string>
    <string name="waiting_for_update">Ожидаение обновления координат:</string>
    <string name="request_in_progress">Запрос обрабатывается</string>
    <string name="stop_updates">Остановить</string>
    <string name="current_speed">x км/час</string>
    <string name="request_speed">Определить скорость</string>
    <string name="message_current_speed">Текущая скорость:</string>
    <string name="get_speed_button">Текущая скорость</string>
    <string name="display_on_map">Показать на карте</string>
    <string name="cancel_curr_location_request">Отменить запрос</string>
    <string name="highAccuracyMode">Наивысшая точность</string>
    <string name="balancedPowerMode">Средний расход батареи</string>
    <string name="lowPowerMode">Низкий расход батареи</string>
    <string name="mapCloseButton">X</string>
</resources>