<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar_speed"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_waiting_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_in_progress"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_current_speed_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_current_speed"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_current_speed_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_speed"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_request_speed_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/request_speed" />

        <Button
            android:id="@+id/button_stop_speed_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_updates"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>