<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/request_in_progress_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_in_progress"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/request_curr_coordinates_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/request_coordinates" />

        <Button
            android:id="@+id/button_cancel_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_curr_location_request"
            android:enabled="false"/>

        <Button
            android:id="@+id/button_display_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_on_map"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>
